--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 		/>
-		<link rel="stylesheet" href="css/estilos.css" />
+		<link rel="stylesheet" href="css/pruebacss.css" />
 	</head>
 	<body>
 		<div class="conteiner">
 			<header class="row">
-				<div class="contenedor-headerIndex">
+				<div class="header">
 					<a href="index.html">
 						<img src="imagenes/logo-removebg-preview.png" class="logo" />
 					</a>
