--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Afiladospostai</title>
+		<meta name="description" content="conoce nuestro taller de afilaciones,proporcionamos un servicio de venta y afilado de herramientas de corte">
+		<meta name="keywords" content="afilados,afilaciones,taller de afilados">
+		<title>afiladospostai</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
