--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Afiladospostai</title>
+		<meta name="description" content=" contactate con nosotros,deja un comentario sobre dudas y opiniones de nuestro taller de afilaciones.">
+		<meta name="keywords" content="afilados,afilaciones,taller de afilados">
+		<title>contacto</title>
 		<link rel="shortcut icon" href="../imagenes/favicon.png" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
