--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Afiladospostai</title>
+		<meta name="description" content="horarios de atención">
+		<meta name="keywords" content="afilados,afilaciones,taller de afilados">
+		<title>horarios</title>
 		<link rel="shortcut icon" href="../imagenes/favicon.png" />
 		<link rel="stylesheet" href="../css/estilos.css" />
 		<link
