--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Afiladospostai</title>
+        <meta name="description" content="proporcionamos un servicio de venta y afilado de herramientas de corte,el siguiente contenido detalla los insumos disponibles en nuestro taller.">
+		<meta name="keywords" content="afilados,afilaciones,taller de afilados">
+        <title>insumos</title>
         <link rel="shortcut icon" href="../imagenes/favicon.png">
         <link
                 href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
