--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -3,8 +3,10 @@
 	<head>
 	<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Afiladospostai</title>
+		<title>sobre nosotros</title>
 		<link rel="shortcut icon" href="../imagenes/favicon.png" />
+		<meta name="description" content="conoce como comenzó nuestro taller">
+		<meta name="keywords" content="afilados,afilaciones,taller de afilados">
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
