--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="horarios de atención">
 		<meta name="keywords" content="afilados,afilaciones,taller de afilados">
-		<title>horarios</title>
+		<title>contacto</title>
 		<link rel="shortcut icon" href="../imagenes/favicon.png" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -34,9 +34,9 @@
 		</header>
 		<!-- Fin Header -->
 		<h1>Contacto</h1>
-		<div class="container border border-secondary p-3">
-			<form>
-				<div class="col-sm-8">
+		<div class="container mb-3">
+			<form class="col-sm-6">
+				<div class="col-sm-12 mb-3">
 					<label for="nombre" class="form-label">Nombre y Apellido</label>
 					<input
 						type="text"
@@ -45,7 +45,7 @@
 						placeholder="ingrese su Nombre y Apellido"
 					/>
 				</div>
-				<div class="col-sm-8">
+				<div class="col-sm-12 mb-3">
 					<label for="email" class="form-label">Email</label>
 					<input
 						type="email"
@@ -54,8 +54,8 @@
 						placeholder="ingrese su email@gmail.com"
 					/>
 				</div>
-				<div class="col-sm-8">
-					<label for="telefono" class="form-label">telefono</label>
+				<div class="col-sm-12 mb-3">
+					<label for="telefono" class="form-label">Telefono</label>
 					<input
 						type="number"
 						class="form-control form-control-sm"
@@ -63,8 +63,8 @@
 						placeholder="ingrese su numero de celular"
 					/>
 				</div>
-				<div class="col-sm-8">
-					<label for="consulta" class="form-label">consulta</label>
+				<div class="col-sm-12 mb-3">
+					<label for="consulta" class="form-label">Consulta</label>
 					<input
 						type="email"
 						class="form-control form-control-lg"
@@ -73,7 +73,7 @@
 					/>
 				</div>
 				<br />
-				<div class="from-group">
+				<div class="from-group mb-3">
 					<input
 						class="from-control btn btn-primary"
 						type="submit"
@@ -98,10 +98,7 @@
 							<img src="../imagenes/logo-removebg-preview.png" class="logo" />
 						</a>
 					</div>
-					<div>
-						<h2>contacto</h2>
-						<p>Martin piccini cel:342- 8388723873 fijo: 342 4608997</p>
-					</div>
+					
 					<div class="animate__animated animate__lightSpeedInRight">
 						<a href="https://www.facebook.com/martinalepiccini">
 							<img src="../icon/fb.png" />
